--- a/examples/sample-1/themes/landscape/layout/layout.ejs
+++ b/examples/sample-1/themes/landscape/layout/layout.ejs
@@ -7,8 +7,9 @@
       <div id="wrap">
         <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
           <div class="outer">
-            <section id="main"> <%- page.breadcrumb %>
-                <%- body %></section>
+            <section id="main">
+              <%- body %>
+            </section>
             <% if (theme.sidebar && theme.sidebar !=='bottom' ){ %>
               <%- partial('_partial/sidebar', null, {cache: !config.relative_link}) %>
                 <% } %>
