--- a/examples/sample-1/themes/landscape/layout/page.ejs
+++ b/examples/sample-1/themes/landscape/layout/page.ejs
@@ -1,1 +1,2 @@
-<%- partial('_partial/article', {post: page, index: false}) %>
+<%- page.breadcrumb %>
+  <%- partial('_partial/article', {post: page, index: false}) %>
